# AB-AV1-GUI

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  convert - Copy.bat.txt  convert.bat  convert.sh  deny.toml  documentation.md  llm.md  main.py  pyproject.toml
.claude/hooks/: worktree-create.sh
.github/workflows/: media-contract.yml  rust.yml  ui.yml
convert_app/: ab_av1_wrapper.py  av1_converter_config.json  convert.py  main.py  utils.py  video_conversion.py
convert_app/gui/: __init__.py  base.py  main_window.py  operations.py
convert_app/gui/tabs/: __init__.py  main_tab.py  settings_tab.py
crates/crfty-core/: AGENTS.md  Cargo.toml
crates/crfty-core/src/: analysis.rs  constants.rs  estimation.rs  failure.rs  history.rs  job.rs  journal.rs  lib.rs  media.rs  output.rs  policy.rs  projection.rs  reducer.rs  settings.rs  state.rs  tests.rs  time.rs
crates/crfty-core/tests/: export_fold_fixtures.rs  export_projection_fixtures.rs
crates/crfty-engine/: AGENTS.md  Cargo.toml
crates/crfty-engine/src/: ab_av1.rs  analysis_discovery.rs  blake2b.rs  config.rs  coordinator.rs  driver.rs  failure.rs  filesystem.rs  history_import.rs  journal.rs  lib.rs  lock.rs  media.rs  os_actions.rs  output.rs  power.rs  process.rs  process_supervisor.rs  rate.rs  release.rs  remux.rs  scan.rs  sentinel.rs  tools.rs
crates/crfty-engine/src/ab_av1/: mod.rs  operation.rs  runtime.rs  types.rs
crates/crfty-engine/src/analysis/: mod.rs
crates/crfty-engine/src/logging/: mod.rs  privacy.rs  rolling.rs
crates/crfty-engine/tests/: ab_av1_process.rs  ab_av1_real_media.rs  analysis_basic_scan.rs  durability.rs  process_supervisor.rs  remux_process.rs  tool_availability.rs  vendor_download.rs  vendor_extract.rs  vendor_install.rs  vendor_native.rs
crates/crfty-engine/tests/support/: contract_fixture.rs  process_fixture.rs
crates/crfty-shell/: AGENTS.md  Cargo.toml  tauri.conf.json
crates/crfty-shell/capabilities/: default.json
crates/crfty-shell/icons/: icon.icns
crates/crfty-shell/src/: bridge.rs  commands.rs  lib.rs  main.rs
crates/crfty-shell/tests/: export_bindings.rs
docs/: AB_AV1_PARSING.md  ANALYSIS.md  ARCHITECTURE.md  BUG_NOT_WORTHWHILE_ESTIMATES.md  HISTORY_FORMAT.md  HISTORY_IMPORT.md  PLAN_AUDIO_STREAMS_AND_BITRATE.md  REFACTORING-PLAN.md  TIME_ESTIMATION.md
docs/adr/: 001-replace-alias-records-with-path-normalization.md  001-separate-core-engine-and-shell.md  001-use-metadata-for-duplicate-detection.md  002-adopt-versioned-history-schema-v2.md  002-adopt-versioned-history-schema.md  002-centralize-mutation-in-a-driver-reducer.md  003-embed-a-pinned-ab-av1-adapter.md  004-persist-state-in-an-append-only-journal.md  005-forbid-first-party-unsafe-rust.md  006-generate-ipc-bindings-with-tauri-specta.md  007-pin-decode-mode-in-analysis-identity.md  008-take-an-engine-owned-data-directory-lock.md  008-vendor-pinned-ffmpeg-with-checksummed-atomic-installs.md  009-compact-the-journal-into-a-snapshot-head-line.md  010-vendor-pinned-ffmpeg-with-checksummed-atomic-installs.md  011-acknowledge-corruption-by-generation-identity.md  012-derive-history-and-statistics-as-pure-projections.md  013-filter-queue-adds-at-enqueue.md  013-scrub-paths-inside-the-log-sink.md  015-project-imported-history-separately.md  016-scope-analysis-work-to-ephemeral-generations.md  017-keep-analysis-paths-engine-native.md  agents.md
src/: __init__.py  ab_av1_wrapper.py  cache_helpers.py  config.py  convert.py  estimation.py  folder_analysis.py  hardware_accel.py  history_index.py  logging_setup.py  main.py  models.py  platform_utils.py  privacy.py  utils.py  vendor_manager.py  video_conversion.py  video_metadata.py
src/ab_av1/: checker.py  cleaner.py  exceptions.py  init.py  parser.py  runner.py  stats.py  wrapper.py
src/conversion_engine/: callback_handlers.py  cleanup.py  init.py  scanner.py  worker.py
src/gui/: analysis_controller.py  analysis_scanner.py  analysis_tree.py  base.py  callback_handlers.py  charts.py  constants.py  conversion_controller.py  dependency_manager.py  gui_actions.py  gui_updates.py  main_window.py  operations.py  queue_controller.py  queue_manager.py  queue_tree.py  tree_display.py  tree_formatters.py  tree_state_manager.py  tree_utils.py
src/gui/dialogs/: __init__.py  ffmpeg_download_dialog.py
src/gui/tabs/: __init__.py  analysis_tab.py  convert_tab.py  history_tab.py  main_tab.py  settings_tab.py  statistics_tab.py
src/gui/widgets/: __init__.py  add_to_queue_dialog.py  operation_dropdown.py
supply-chain/: audits.toml  config.toml
tests/: test_cache_helpers.py  test_estimation.py  test_export_history_v3.py  test_history_index.py  test_migrate_history_v2.py  test_parser.py  test_privacy.py  test_runner.py  test_stats.py  test_tree_display.py  test_tree_formatters.py  test_utils.py  test_wrapper.py
tools/: export_history_v3.py  hash_lookup.py  migrate_history_v2.py  test_export_history_v3.py
ui/: .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  index.html  knip.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/scripts/: generate-parity-fixtures.py
ui/src/: App.tsx  index.css
ui/src/components/: close-dialog.tsx  empty-state.tsx  error-boundary.tsx  second-instance.tsx
ui/src/components/layout/: app-lifecycle.browser.test.tsx  sidebar.tsx  view-activity.test.tsx  view-activity.ts  views.ts
ui/src/components/ui/: alert-dialog.tsx  card.tsx  chart.tsx  dropdown-menu.tsx  index.ts  progress.tsx  select.tsx  tabs.tsx  tooltip.tsx
ui/src/dev/kitchen-sink/: analysis-section.tsx  d11-section.tsx  density-section.tsx  history-section.tsx  index.tsx  primitives-section.tsx  queue-components-section.tsx  queue-section.tsx  stats-section.tsx  theme-pair.tsx  tokens-section.tsx
ui/src/dev/spike-drag/: data.test.ts  data.ts  dnd-kit-react-spike.tsx  dnd-kit-spike.tsx  index.tsx  pangea-spike.tsx  pragmatic-spike.tsx  row.tsx
ui/src/features/analysis/: analysis-view.tsx
ui/src/features/history/: history-model.test.ts  history-model.ts  (+3 more)
ui/src/lib/: bindings.ts  settings-stream.test.ts  settings-stream.ts  theme.ts
(+69 files in other folders)
