[workspace]
members = ["crates/crfty-core", "crates/crfty-engine", "crates/crfty-shell"]
resolver = "3"

[workspace.dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }

[workspace.package]
version = "3.0.0-alpha.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Loufe/AB-AV1-GUI"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
