[project]
name = "auto-av1-converter"
version = "1.0.0"
description = "GUI application for batch converting videos to AV1 codec using VMAF-targeted quality"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
av1-converter = "src.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules

    # Style & Quality
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "FLY",    # flynt (f-string conversion)
    "PERF",   # Perflint
    "FURB",   # refurb

    # Naming & Structure
    "N",      # pep8-naming
    "A",      # flake8-builtins
    "ERA",    # eradicate (commented-out code)

    # Type Checking
    "TC",     # flake8-type-checking

    # Error Handling
    "TRY",    # tryceratops
    "RSE",    # flake8-raise

    # Security
    "S",      # flake8-bandit

    # Best Practices
    "SLF",    # flake8-self
    "PL",     # Pylint
    "DTZ",    # flake8-datetimez

    # Logging & Debugging
    "LOG",    # flake8-logging
    "T10",    # flake8-debugger

    # Formatting
    "COM",    # flake8-commas
    "Q",      # flake8-quotes
    "ISC",    # flake8-implicit-str-concat
]
ignore = [
    # Formatter conflicts
    "COM812",  # Trailing comma missing
    "ISC001",  # Single-line implicit string concat

    # Intentional patterns in this codebase
    "N806",    # Non-lowercase variable in function (GUI, VMAF, CRF)
    "TRY003",  # Long exception messages are fine
    "TRY300",  # else block on try - early returns are clearer
    "TRY301",  # Raise within try - intentional validation pattern

    # Security false positives (desktop app calling ffmpeg/ab-av1)
    "S603",    # subprocess call - legitimate use of external tools
    "S606",    # subprocess without shell - correct secure pattern
    "S607",    # partial executable path - required for PATH tools

    # Appropriate for local logging timestamps
    "DTZ005",  # datetime.now() without tz - local timestamps only

    # Required for correctness (each iteration needs individual handling)
    "PERF203", # try-except in loop

    # Architectural issues (require major refactoring, not quick fixes)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/utils.py" = ["ERA001"]  # False positives: inline comments explaining regex patterns

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ty.src]
include = ["src"]
