[package]
name = "crfty-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"

[dev-dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }

[lints]
workspace = true
