[package]
name = "crfty-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }

[lints]
workspace = true
