[package]
name = "crfty-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
contract-test-fixture = []

[[bin]]
name = "crfty-contract-fixture"
path = "tests/support/contract_fixture.rs"
required-features = ["contract-test-fixture"]

[[bin]]
name = "crfty-process-fixture"
path = "tests/support/process_fixture.rs"
required-features = ["contract-test-fixture"]

[dependencies]
ab-av1 = { version = "0.11.4", git = "https://github.com/Loufe/ab-av1.git", rev = "8bde51723f6f95945792f58a94c08f59171047d7", default-features = false, features = ["library"] }
blake2 = { version = "0.10.6", default-features = false }
command-group = "5.0.1"
crfty-core = { path = "../crfty-core" }
file-id = "0.2.3"
keepawake = { version = "0.6.0", default-features = false }
lzma-rs = "0.3.0"
# The `reveal` feature adds select-in-file-manager (D-Bus FileManager1 on
# Linux, shell item selection on Windows) alongside the default-program open.
opener = { version = "0.8.5", features = ["reveal"] }
regex = "1.13.1"
# rustls-no-provider + an explicit ring provider: reqwest 0.13 dropped bundled
# webpki roots, and the default rustls feature would pull aws-lc-rs (cmake +
# nasm on Windows). Trust roots come from the OS verifier; the compiled-in
# SHA-256 manifest is the actual trust anchor for vendor downloads (ADR-010).
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls-no-provider"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.10.9", default-features = false }
tar = { version = "0.4.45", default-features = false }
tempfile = { version = "3.27.0", default-features = false }
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tokio-stream = "0.1.18"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "registry", "std"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[lints]
workspace = true
