[package]
name = "crfty-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "crfty_shell"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
crfty-core = { path = "../crfty-core", version = "=3.0.0-alpha.0" }
crfty-engine = { path = "../crfty-engine", version = "=3.0.0-alpha.0" }
serde = { workspace = true }
specta = { workspace = true }
# default-features re-listed minus common-controls-v6: ComCtl32 v6 linkage
# needs a manifest that test binaries lack, so `cargo test` executables die at
# load on Windows with STATUS_ENTRYPOINT_NOT_FOUND (tauri-apps/tauri#13419).
# Re-enable it alongside a manifest fix if native Windows dialogs ever need
# v6 styling.
tauri = { version = "=2.11.5", default-features = false, features = [
    "compression",
    "dbus",
    "dynamic-acl",
    "specta",
    "wry",
    "x11",
] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tracing = { version = "=0.1.44", default-features = false, features = ["std"] }

[dev-dependencies]
specta-typescript = "=0.0.12"

[lints]
workspace = true
